@@ -5,25 +5,25 @@
     <string id="30000">Neu hinzugefügt</string>
     <string id="30001">Nach Ländern sortieren</string>
     <string id="30002">Nach Genre sortieren</string>
-    <string id="30003">Nur Favoriten anzeigen</string>
+    <string id="30003">Nur Bookmarks anzeigen</string>
     
     <!-- Context -->
-    <string id="30004">Favorit hinzufügen</string>
-    <string id="30005">Favorit löschen</string>
-    <string id="30006">Alle Favoriten löschen</string>
+    <string id="30004">Bookmark hinzufügen</string>
+    <string id="30005">Bookmark löschen</string>
+    <string id="30006">Alle Bookmarks löschen</string>
     
     <!-- Favorites -->
-    <string id="30007">Favorit hinzugefügt!</string>
-    <string id="30008">Favorit NICHT hinzugefügt!</string>
-    <string id="30009">Favorit löschen?</string>
-    <string id="30010">Favorit gelöscht!</string>
-    <string id="30011">Favorit NICHT gelöscht!</string>
-    <string id="30012">Alle Favoriten löschen?</string>
-    <string id="30013">Alle Favoriten gelöscht!</string>
-    <string id="30014">Favoriten NICHT gelöscht!</string>
-    <string id="30015">Favorit bereits vorhanden.</string>
-    <string id="30016">Keine weiteren Favoriten vorhanden.</string>
-    <string id="30017">Keine Favoriten vorhanden.</string>
+    <string id="30007">Bookmark hinzugefügt!</string>
+    <string id="30008">Bookmark NICHT hinzugefügt!</string>
+    <string id="30009">Bookmark löschen?</string>
+    <string id="30010">Bookmark gelöscht!</string>
+    <string id="30011">Bookmark NICHT gelöscht!</string>
+    <string id="30012">Alle Bookmarks löschen?</string>
+    <string id="30013">Alle Bookmarks gelöscht!</string>
+    <string id="30014">Bookmarks NICHT gelöscht!</string>
+    <string id="30015">Bookmark bereits vorhanden.</string>
+    <string id="30016">Keine weiteren Bookmarks vorhanden.</string>
+    <string id="30017">Keine Bookmarks vorhanden.</string>
 
     <!-- Settings -->   
     <string id="30020">Standort anzeigen</string>
